# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  dict_diff.py  find_diff.py
gendiff/formatter/: __init__.py  json.py  plain.py  stylish.py
gendiff/importer/: __init__.py  file.py
gendiff/modules/: loader.py  parser.py
gendiff/scripts/: gendiff.py  generate_diff.py
tests/: test_gendiff.py  test_plain.py
tests/fixtures/: complex_plain.txt  file1.txt  file2.txt  json1.txt  json2.txt  stylish2.txt
